--- a/Part B (Multi Data).ipynb
+++ b/Part B (Multi Data).ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "2c97223c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The jupyter notebooks were used for testing and to create the graphs shown in the paper for the clean \\ncode please see the Results Maker.py file\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"The jupyter notebooks were used for testing and to create the graphs shown in the paper for the clean \n",
+    "code please see the Results Maker.py file\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "d3c5a922",
    "metadata": {},
@@ -63,6 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing the CSV Files\n",
     "trainData = pd.read_csv(\"TrainingDataMulti.csv\", sep=\",\",header=None)\n",
     "testData = pd.read_csv(\"TestingDataMulti.csv\", sep=\",\",header=None)"
    ]
@@ -74,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Converting CSV to dataframe\n",
     "df_train = pd.DataFrame(data = trainData)\n",
     "df_test = pd.DataFrame(data = testData)"
    ]
@@ -713,7 +738,7 @@
     }
    ],
    "source": [
-    "df_train.iloc[:,-1].value_counts()"
+    "df_train.iloc[:,-1].value_counts() #Checking to see if dataset is balanced"
    ]
   },
   {
@@ -726,11 +751,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e03b823f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This section was once again used for quick testing of classification algorithms by hot swapping the classifiers in the pipe lines"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "18d840a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Splitting train data into train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.2, random_state=42)"
    ]
   },
@@ -752,19 +788,10 @@
     }
    ],
    "source": [
+    "#Testing Extra Trees\n",
     "pipe = ExtraTreesClassifier( criterion= 'entropy' ,max_depth=None, max_features = None )\n",
     "pipe.fit(X_train, y_train)\n",
     "pipe.score(X_test,y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4efdbdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{'criterion': 'entropy', 'max_depth': 10, 'max_features': None, 'min_samples_leaf': 2, 'min_samples_split': 10}"
    ]
   },
   {
@@ -783,7 +810,7 @@
    ],
    "source": [
     "\n",
-    "\n",
+    "#Testing Gradient Descent\n",
     "pipe = make_pipeline(StandardScaler(), SGDClassifier())\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
@@ -807,7 +834,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Testing support vector classifier\n",
     "pipe = make_pipeline(StandardScaler(), SVC(kernel='poly'))\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
@@ -831,6 +858,7 @@
     }
    ],
    "source": [
+    "#testing regression classifer\n",
     "pipe = make_pipeline(StandardScaler(),LogisticRegression(C=100, max_iter=1000))\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
@@ -854,6 +882,7 @@
     }
    ],
    "source": [
+    "#Testing decision tree classifer\n",
     "pipe = make_pipeline(StandardScaler(),DecisionTreeClassifier())\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
@@ -881,6 +910,7 @@
     }
    ],
    "source": [
+    "#initial graphing\n",
     "x_axis = ['Decision Tree', 'SVM', 'Logistic Regression', 'SGD']\n",
     "y_axis = [DT_accuracy, SVM_accuracy, LG_accuracy, SGD_accuracy]\n",
     "\n",
@@ -908,6 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Same K fold function taken from binary testing\n",
     "def kFoldAverages(num,scalar):\n",
     "    SGD_accuracy =[]\n",
     "    SVM_accuracy =[]\n",
@@ -1080,6 +1111,7 @@
     }
    ],
    "source": [
+    "#testing of voting classifier\n",
     "voting_clf = VotingClassifier(\n",
     "        estimators=[('lr', LogisticRegression()), ('rf', RandomForestClassifier())],\n",
     "        voting='hard'\n",
@@ -1109,6 +1141,7 @@
     }
    ],
    "source": [
+    "#trying to make my own random forest\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.1, random_state=10)\n",
@@ -1314,7 +1347,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#keras nueral net\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.1, random_state=10)\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
@@ -1906,7 +1939,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#upgraded keras neural net\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.1, random_state=10)\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
@@ -1945,6 +1978,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#large keras neural net\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.1, random_state=None)\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
@@ -2002,7 +2036,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#testing ada boost\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.2, random_state=10)\n",
     "param_grid = {\n",
     "    'n_estimators': [50, 100, 200,300,400],  \n",
@@ -2095,6 +2129,7 @@
     }
    ],
    "source": [
+    "#grid search for best parameters\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_train.iloc[:,:-1],df_train.iloc[:,-1], test_size=0.2, random_state=42)\n",
     "param_grid = {\n",
     "    'max_depth': [None, 5, 10],  \n",
